@@ -28,7 +28,7 @@ dependencies {
     compile 'org.apache.httpcomponents:httpclient:4.5.13'
     compile 'org.apache.logging.log4j:log4j-api:2.19.0'
     compile 'org.apache.logging.log4j:log4j-core:2.19.0'
-    compile 'com.oracle.database.jdbc:ojdbc8:21.4.0.0'
+    compile 'com.oracle.database.jdbc:ojdbc8:21.5.0.0'
     compile 'org.springframework:spring-beans:5.3.23'
     compile 'org.springframework:spring-jdbc:5.3.23'
 
